# gb-emulator

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: CI.yml
sdl/: Cargo.toml  main.rs
src/: cartridge.rs  cpu.rs  gb.rs  instructions.rs  joypad.rs  lib.rs  main.rs  memory.rs  mmu.rs  ppu.rs  serial.rs  timer.rs  utils.rs
src/cartridge/: mbc1.rs  mbc3.rs
tests/opcodes/: opcodes.rs
